Sort button is functioning now

--- a/index.html
+++ b/index.html
@@ -132,7 +132,17 @@
     <div class="buttons">
       <button class="btn__reset">Reset</button>
       <button class="btn__deleteAll">Delete All</button>
-      <button class="btn__sort">Sort</button>
+      <div>
+        <div class="sort__options hidden">
+          <ul>
+            <li>SORT BY</li>
+            <li class="sortby__distance">DISTANCE</li>
+            <li class="sortby__duration">DURATION</li>
+            <li class="sortby__type">TYPE</li>
+          </ul>
+        </div>
+        <button class="btn__sort">Sort</button>
+      </div>
     </div>
     <div class="modal hidden">
       <div class="logo__warning">
