Project doen for now.

--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
       <div>
         <div class="sort__options hidden">
           <ul>
-            <li>SORT BY</li>
+            <li class="sortby">SORT BY</li>
             <li class="sortby__distance">DISTANCE</li>
             <li class="sortby__duration">DURATION</li>
             <li class="sortby__type">TYPE</li>
+            <li class="original">ORIGINAL</li>
           </ul>
         </div>
         <button class="btn__sort">Sort</button>
